third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/features/complex-expressions/alternate_exprs_range_swapped_bounds.rs
#[derive(num_enum::TryFromPrimitive)]
#[repr(u8)]
enum Numbers {
    Zero = 0,
    #[num_enum(alternatives = [255..=2])]
    NonZero = 1,
}

fn main() {

}
